--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -107,3 +107,25 @@ a:hover {
     margin: 30px 5px 10px 5px;
     max-height: 30px;
 }
+
+.cover-container {
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #d45855;
+    // background: url("https://lh3.googleusercontent.com/proxy/6lJclsNQrdL4olwT4k7Un3R6dNhjhYtv947nESJu6EH9pnfmTB9CHN5wQMHGL0OblJc-pprZ-tJQKeK5EQJW2bBqMGHXsNyeCAL33tVpwyJTGcKWzDocHchio48Pp7s");
+
+    .cover-text {
+        color: white;
+        width: 36rem;
+        font-size: 2.5rem;
+    }
+}
+
+.cover-subtitle-container {
+    margin-top: -5rem;
+    background-color: white;
+    box-shadow: 0 .5rem 1rem rgba(black, .15);
+}
